--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2' // (v4.5)
     compile 'com.joanzapata.iconify:android-iconify-material:2.2.2' // (v2.0.0)
+//    compile 'com.google.zxing:core:3.2.1'
+//    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 }
