--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2' // (v4.5)
     compile 'com.joanzapata.iconify:android-iconify-material:2.2.2' // (v2.0.0)
-//    compile 'com.google.zxing:core:3.2.1'
-//    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.7.0'
+    compile 'com.google.android.gms:play-services:9.6.1'
+    compile 'com.google.android.gms:play-services-auth:9.6.1'
+    compile 'com.google.android.gms:play-services-gcm:9.6.1'
 }
