--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,16 @@
         <activity
             android:name=".MemberCardActivity"
             android:theme="@style/AppThemeActivity.NoActionBarActivity" />
-        <activity android:name=".CollectionActivity"
+        <activity
+            android:name=".CollectionActivity"
+            android:theme="@style/AppThemeActivity.NoActionBarActivity" />
+        <activity
+            android:name=".MostUsedActivity"
+            android:theme="@style/AppThemeActivity.NoActionBarActivity" />
+        <activity
+            android:name=".ProfileActivity"
+            android:theme="@style/AppThemeActivity.NoActionBarActivity" />
+        <activity android:name=".UpdateProfileActivity"
             android:theme="@style/AppThemeActivity.NoActionBarActivity"/>
     </application>
 
